--- a/css/index.css
+++ b/css/index.css
@@ -674,6 +674,10 @@ p#cleGreen{
     color:gold;
 }
 
+#devMenu3{
+    width:250px;
+}
+
 .devMenu:hover{
     background: transparent;
     color:gold;
