--- a/css/composer.css
+++ b/css/composer.css
@@ -500,3 +500,28 @@ p#move{
     background: radial-gradient(white, mediumvioletred);
     margin-left: 45px;
 }
+
+#toggle{
+    text-align:center;
+    background: black;
+    color:white;
+    font-family: 'Poiret One', cursive;
+    box-sizing: border-box;
+    border:1px solid grey;
+    margin:0 auto;
+    padding:10px;
+    border-radius:3px;
+    cursor:pointer;
+    transition: all 0.3s ease;
+}
+
+#toggle:hover{
+    background: white;
+    color:black;
+}
+
+p#style{
+    margin-bottom:-4px;
+    font-family: 'Poiret One', cursive;
+    font-size: 0.8em;
+}
