--- a/css/journal.css
+++ b/css/journal.css
@@ -762,12 +762,18 @@ span.sup{
   padding:50px;
   align-items:center;
   justify-items:center;
+  perspective: 100px;
 }
 
 .murExpo > img {
   box-shadow: 0 3px 10px -5px black;
   border-radius:2px;
   transition: all 0.3s ease;
+  transform-style: preserve-3d;
+}
+
+.murExpo > img:hover{
+  box-shadow: 0 10px 20px -10px black;
 }
 
 #visage{
