--- a/css/pensees.css
+++ b/css/pensees.css
@@ -27,7 +27,7 @@ html,body
     font-family: 'Exo', sans-serif;
     color: rgba(126, 106, 103, 0.11);
     font-size:7em;
-    transition: color 0.3s ease;
+    transition: color 1s ease;
 }
 
 a{
@@ -65,14 +65,13 @@ a.inLink:hover{
     align-items:center;
     justify-items:center;
     bottom: 0;
-    background: radial-gradient(at top, white, transparent);
+    background: white;
     transition: box-shadow 0.3s ease;
     cursor: pointer;
     font-weight: bold;
     box-shadow: 0px -5px 20px -12px black;
-    width:233px;
+    width:100%;
     height:55px;
-    border-radius: 100px 100px 50px 50px;
     color: black;
     font-size: 1.3em;
 }
