--- a/gwriter/gwriter.css
+++ b/gwriter/gwriter.css
@@ -53,7 +53,6 @@ a:hover{
 
 #writing_area{
     width:100%;
-    height:100px;
     color:gold;
     word-wrap: break-word;
     border:1px solid cornflowerblue;
@@ -61,17 +60,18 @@ a:hover{
     padding:15px;
     resize:none;
     font-size:1.8em;
-    height:3.6em;
+    height:2.8em;
     font-weight:bold;
     box-shadow: 0 0px 10px 1px cornflowerblue inset;
     border-radius: 2px;
     background: rgb(25, 25, 25);
     font-family: 'Courier New', Courier, monospace;
+    overflow: hidden;
 }
 
 #writing_area::placeholder{
     color:rgb(92, 90, 90);
-    font-size:0.5em;
+    font-size:0.4em;
 }
 
 #output_area{
