--- a/gwriter/gwriter.css
+++ b/gwriter/gwriter.css
@@ -80,9 +80,9 @@ a:hover{
     border-radius:0 0 3px 3px;
     box-sizing: border-box;
     background: black;
-    border-left:1px solid gold;
-    border-right: 1px solid gold;
-    border-bottom:1px solid gold;
+    border-left:1px solid grey;
+    border-right: 1px solid grey;
+    border-bottom:1px solid grey;
     fill:none;
     stroke-linecap: round;
     stroke-linejoin: round;
@@ -135,7 +135,6 @@ svg.mem{
     opacity: 0.8;
     transition: color 0.3s ease, opacity 0.3s ease;
     width:100%;
-    border-radius: 0 30px 0 0;
     font-family: var(--FT);
     font-size:2em;
     color: blue;
@@ -281,7 +280,7 @@ span.d{
     box-sizing: border-box;
     padding: 10px;
     width:100%;
-    font-family: var(--FT);
+    font-family: 'Courier New', Courier, monospace;
     font-size:1em;
 }
 
@@ -291,15 +290,16 @@ span.d{
     height:100%;
     width:100%;
     max-width:400px;
-    max-height:480px;
+    max-height:100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background: radial-gradient(at top left, rgb(255, 175, 143), rgb(252, 142, 122));
+    background: radial-gradient(at top left, rgb(245, 220, 211), rgb(199, 163, 156));
     z-index:1;
     box-shadow: 0 0px 40px -5px black;
     border-radius:2px 30px 2px 2px;
     z-index:200;
+    overflow: auto;
 }
 
 span.courier{
@@ -333,7 +333,7 @@ span.info_btn{
     justify-items:center;
     position: absolute;
     right:0;
-    bottom:0;
+    margin-bottom:0;
     border-radius:2px;
     height:50px;
     width:50px;
@@ -362,10 +362,11 @@ span.info_btn{
     box-sizing: border-box;
     padding-top:15px;
     text-align:center;
-    border-radius:3px;
+    border-radius:100%;
     font-family: 'Courier New', Courier, monospace;
     font-weight:bold;
     background: black;
+    cursor: pointer;
 }
 
 #R{
@@ -389,6 +390,24 @@ span.info_btn{
     box-sizing: border-box;
     border:1px solid grey;
     border-radius: 100%;
+}
+
+#cut_indicator{
+    grid-column: 1 / span 2;
+    width:100%;
+    text-align:center;
+    background: black;
+    color:white;
+    height:30px;
+    max-width:400px;
+    margin:0 auto;
+    border-radius: 30px 30px 0 0;
+    display: grid;
+    align-items:center;
+    justify-items:center;
+    font-family: 'Courier New', Courier, monospace;
+    box-sizing: border-box;
+    border-top:1px solid grey;
 }
 
 .end{
