--- a/gwriter/gwriter.css
+++ b/gwriter/gwriter.css
@@ -30,6 +30,15 @@ header{
     z-index:100;
 }
 
+span.tit{
+    font-family: 'Courier New', Courier, monospace;
+    color: white;
+    text-align:center;
+    width:400px;
+    display: inline-block;
+    font-size:2em;
+    text-shadow: 0 1px 1px black;
+}
 
 p{
     margin: 0 auto;
@@ -105,7 +114,6 @@ svg.mem{
     display: grid;
     align-items:center;
     justify-items:center;
-
 }
 
 .controls{
@@ -367,6 +375,11 @@ span.info_btn{
     font-weight:bold;
     background: black;
     cursor: pointer;
+    transition: box-shadow 0.3s ease;
+}
+
+.color_select:hover{
+    box-shadow: 0 0px 10px white;
 }
 
 #R{
