--- a/gwriter/gwriter.css
+++ b/gwriter/gwriter.css
@@ -5,7 +5,7 @@ body{
 :root{
     --green: rgb(78, 122, 52);
     --FT: 'Poiret One', cursive;
-}
+} 
 
 header{
     display: grid;
@@ -425,6 +425,32 @@ span.info_btn{
 
 .end{
     margin-top:200px;
+}
+
+#search{
+    display: grid;
+    align-items:center;
+    justify-items:center;
+    text-align:center;
+    font-size:0.6em;
+    position: fixed;
+    height:81px;
+    width:30px;
+    background: white;
+    bottom:0;
+    left:50%;
+    transform: translate(-770%);
+    border-radius:30px 0 0 0;
+    transition: background 0.3s ease;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    overflow: scroll;
+    box-sizing: border-box;
+}
+
+#search::-webkit-scrollbar{
+    width:0px;
+    background: transparent;
 }
 
 @media screen and (min-width:600px){
