--- a/gwriter/gwriter.css
+++ b/gwriter/gwriter.css
@@ -183,7 +183,7 @@ span.d{
     margin:0 auto;
     min-height:100px;
     background: grey;
-    border-radius:2px;
+    border-radius:2px 2px 30px 30px;
     font-size:0.8em;
     font-family: 'Courier New', Courier, monospace;
     background: rgb(20,20,20);
@@ -451,6 +451,88 @@ span.info_btn{
 #search::-webkit-scrollbar{
     width:0px;
     background: transparent;
+}
+
+.size_matters{
+    width:99%;
+    grid-column: 1 / span 2;
+    display:grid;
+    align-items:center;
+    justify-items:center;
+    grid-template-columns: repeat(2,1fr);
+    box-sizing: border-box;
+    border:1px solid grey;
+    border-radius:30px 30px 0 0;
+}
+
+#apply_size{
+    display: grid;
+    align-items:center;
+    justify-items:center;
+    border-radius:0 30px 0 0;
+    background: white;
+    width:100%;
+    height:100%;
+    cursor: pointer;
+    font-family: 'Courier New', Courier, monospace;
+    background: grey;
+    transition: background 0.3s ease, box-shadow 0.3s ease;
+    box-sizing: border-box;
+
+}
+
+#apply_size:hover{
+    background: light-grey;
+    box-shadow: 0 0 10px white, 0 0 10px white inset;
+}
+
+#change_size{
+    border:none;
+    border-radius:30px 0 0 0;
+    text-align:justify;
+    -moz-text-align-last:center;
+    text-align-last:center;
+    resize:none;
+    width:100%;
+    height:30px;
+    font-size:1.9em;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+#change_size::placeholder{
+    font-size:0.4em;
+    line-height:30px;
+}
+
+b.big{
+    color: white;
+    text-shadow: 0 1px 1px black;
+}
+
+#mute{
+    height:50px;
+    width:50px;
+    background:black;
+    color:white;
+    display:grid;
+    align-items:center;
+    justify-items:center;
+    box-sizing: border-box;
+    position: fixed;
+    left:0;
+    top:50%;
+    transform: translateY(-50%);
+    border-radius:0 30px 30px 0;
+    transition: background 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+    font-family: 'Courier New', Courier, monospace;
+    text-align:center;
+}
+
+#mute:hover{
+    background: white;
+    box-shadow: 0 0 10px white;
 }
 
 @media screen and (min-width:600px){
