--- a/gwriter/gwriter.css
+++ b/gwriter/gwriter.css
@@ -532,7 +532,45 @@ b.big{
 
 #mute:hover{
     background: white;
+    color:black;
     box-shadow: 0 0 10px white;
+}
+
+#eraser{
+    height:50px;
+    width:50px;
+    background: black;
+    color: white;
+    display: grid;
+    align-items:center;
+    justify-items:center;
+    box-sizing: border-box;
+    position: fixed;
+    right:0;
+    top:50%;
+    transform: translateY(-50%);
+    border-radius: 30px 0 0 30px;
+    transition: background 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+    font-family: 'Courier New', Courier, monospace;
+    text-align:center;
+    font-size:0.6em;
+}
+
+#eraser:hover{
+    background: white;
+    color:black;
+    box-shadow: 0 0 10px white;
+}
+
+.glyph{
+    cursor: pointer;
+    transition: stroke 0.3s ease;
+}
+
+.glyph:hover{
+    stroke: red;
+    stroke-width:40;
 }
 
 @media screen and (min-width:600px){
