--- a/gwriter/gwriter.css
+++ b/gwriter/gwriter.css
@@ -557,7 +557,7 @@ b.big{
     font-size:0.6em;
 }
 
-#eraser:hover{
+#eraser:hover{ 
     background: white;
     color:black;
     box-shadow: 0 0 10px white;
@@ -571,6 +571,26 @@ b.big{
 .glyph:hover{
     stroke: red;
     stroke-width:40;
+}
+
+.tuto{
+    width:100%;
+    display:inline-block;
+    box-sizing: border-box;
+    padding:10px;
+    text-align:center;
+    border-radius:6px;
+    border:1px solid cornflowerblue;
+    cursor: pointer;
+    background: black;
+    color: cornflowerblue;
+    font-weight: bold;
+    font-size:1.5em;
+    transition: box-shadow 0.3s ease;
+}
+
+.tuto:hover{
+    box-shadow: 0 3px 10px 3px black, 0 0 10px 2px cornflowerblue inset;
 }
 
 @media screen and (min-width:600px){
