--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ body {
 
 :root {
     --FT: 'Poiret One', cursive;
-} 
+}  
 
 footer{
     position:absolute;
@@ -217,7 +217,7 @@ span.nD{
     background: tomato;
     font-size:0.8em;
     text-shadow: 0 1px 1px black;
-}
+} 
 
 #menuBall3 {
     top: 50%;
@@ -225,6 +225,30 @@ span.nD{
     transform: translateY(50%);
     background:gold;
     color:black;
+}
+
+#menuBallWriter{
+    top:50%;
+    right:70px;
+    transform: translateY(150%);
+    background: gold;
+    color: black;
+}
+
+#menuBallFractalWriter{
+    top:50%;
+    right:132px;
+    transform: translateY(100%);
+    background: rgb(255, 160, 71);
+    color:black;
+}
+
+span.spin{
+    transform: rotate(-10deg);
+    font-size:0.6em;
+    display:block;
+    position: absolute;
+    margin-top:-20px;
 }
 
 span#I{
